--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -27,14 +27,18 @@
           <li class="menu-list-item"><a href="/juliabasics/#the_repl" class="menu-list-link">The REPL</a>
           <li class="menu-list-item"><a href="/juliabasics/#package_management" class="menu-list-link">Package Management</a>
           <li class="menu-list-item"><a href="/juliabasics/#basic_syntax" class="menu-list-link">Basic Syntax</a>
+          <li class="menu-list-item"><a href="/juliabasics/#arrays!" class="menu-list-link">Arrays!</a>
         </ul>
       <a class="sidebar-nav-item {{ispage /types/*}}active{{end}}" href="/types/">Types</a>
         <ul class="menu-list-child-list {{ispage /types/*}}active{{end}}">
-          <li class="menu-list-item"><a href="/types/#the_repl" class="menu-list-link">The REPL</a>
-          <li class="menu-list-item"><a href="/types/#package_management" class="menu-list-link">Package Management</a>
-          <li class="menu-list-item"><a href="/types/#basic_syntax" class="menu-list-link">Basic Syntax</a>
+          <li class="menu-list-item"><a href="/types/#the_type_tree" class="menu-list-link">Type Trees</a>
+          <li class="menu-list-item"><a href="/types/#structs" class="menu-list-link">Structs</a>
+          <li class="menu-list-item"><a href="/types/#mutable_structs" class="menu-list-link">Mutable Structs</a>
+          <li class="menu-list-item"><a href="/types/#parametric_types" class="menu-list-link">Parametric Types</a>
+          <li class="menu-list-item"><a href="/types/#tuples" class="menu-list-link">Tuples</a>
+          <li class="menu-list-item"><a href="/types/#advanced_topics" class="menu-list-link">Advanced Topics</a>
         </ul>
-      <a class="sidebar-nav-item {{ispage /dispatch/*}}active{{end}}" href="/types/">Multiple Dispatch</a>
+      <a class="sidebar-nav-item {{ispage /dispatch/*}}active{{end}}" href="/dispatch/">Multiple Dispatch</a>
         <ul class="menu-list-child-list {{ispage /dispatch/*}}active{{end}}">
           <li class="menu-list-item"><a href="/dispatch/#the_repl" class="menu-list-link">The REPL</a>
           <li class="menu-list-item"><a href="/dispatch/#package_management" class="menu-list-link">Package Management</a>
