--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -25,6 +25,7 @@
       <a class="sidebar-nav-item {{ispage /juliabasics/*}}active{{end}}" href="/juliabasics/">First Steps</a>
         <ul class="menu-list-child-list {{ispage /juliabasics/*}}active{{end}}">
           <li class="menu-list-item"><a href="/juliabasics/#the_repl" class="menu-list-link">The REPL</a>
+          <li class="menu-list-item"><a href="/juliabasics/#environments" class="menu-list-link">Environments</a>
           <li class="menu-list-item"><a href="/juliabasics/#package_management" class="menu-list-link">Package Management</a>
           <li class="menu-list-item"><a href="/juliabasics/#basic_syntax" class="menu-list-link">Basic Syntax</a>
           <li class="menu-list-item"><a href="/juliabasics/#arrays!" class="menu-list-link">Arrays!</a>
