--- a/_css/custom.css
+++ b/_css/custom.css
@@ -142,7 +142,28 @@ TODO: remove when not required in Xranklin.
     src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono/webfonts/JuliaMono-Light.woff2");
 }
 
-pre > code {
-    font-family: "JuliaMono-Black", "Consolas", "Courier", monospace;
-    font-variant-ligatures: contextual;
+pre {
+	position: relative;
+	/* padding: 30px; */
+}
+
+.copy-button {
+	cursor: pointer;
+	border: 0;
+	font-size: 10px;
+	text-transform: uppercase;
+	font-weight: 500;
+	padding: 6px 10px 10px;
+	color: #795548;
+	background-color: transparent;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+.copy-button:hover,
+.copy-button:focus,
+.copy-button:active {
+	outline: 0;
+	background-color: #eee9e6;
 }
