--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -45,6 +45,9 @@
           <li class="menu-list-item"><a href="/dispatch/#package_management" class="menu-list-link">Package Management</a>
           <li class="menu-list-item"><a href="/dispatch/#basic_syntax" class="menu-list-link">Basic Syntax</a>
         </ul>
+      <a class="sidebar-nav-item {{ispage /random/*}}active{{end}}" href="/random/">Random</a>
+        <ul class="menu-list-child-list {{ispage /random/*}}active{{end}}">
+        </ul>
     </nav>
     <p class="copyright-notice">
       <a href="https://github.com/modernjuliaworkflows/modernjuliaworkflows.github.io/blob/main/LICENSE">
